...
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_title">Online Voting System</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_to_login">Already Registered? Click Here to Login</string>
    <string name="click_to_registration">No Login? Click here to Register!</string>
    <string name="logout">Logout</string>
    <string name="click_to_add_data">Click to add a topic</string>
    <string name="user">User</string>
...
