...
        android:background="@drawable/custom_edit_text"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        >

        <ListView
            android:id="@+id/ListViewPost"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>
...
