...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/gray_app">

    <Button
        android:id="@+id/backPostButtonT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="50dp"
        android:text="@string/back_to_topics"
...
